FIX: missing background if $themes_simple_view enabled and $themes_simple_images disabled
git-svn-id: http://svn.resourcespace.com/svn/rs/trunk@8857 c08608d7-6e46-0410-86ca-f2a6f1370df5

--- a/css/colour.css
+++ b/css/colour.css
@@ -349,3 +349,8 @@ UL.jqueryFileTree A:hover {background-color:initial !important;}
 /* chosen collection div */
 #CollectionDiv #MinColDrop .chosen-single:hover, #CollectionDiv #colselect .chosen-single:hover {color:#444;}
 #CollectionDiv .ActionsContainer .chosen-single:hover {color:#999;}
+
+.FeaturedSimpleTile {
+	background: rgba(30, 30, 30, 0.70);
+	color:#FFF;
+}
